# FastApi

./: .gitignore  README.md
.github/workflows/: pipeline.yaml
fast_api/: pyproject.toml
fast_api/fast_api/: app.py
fast_five/: create_db.py  database.db  pyproject.toml
fast_five/fast_five/: app.py  database.py  models.py  schemas.py  security.py  test_app.py
fast_five/routers/: auth.py  users.py
fast_five/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
fast_four/: create_db.py  database.db  pyproject.toml
fast_four/fast_four/: app.py  database.py  security.py
fast_four/tests/: test_app.py  test_db.py  test_security.py
fast_one/: pyproject.toml
fast_one/fast_one/: anotacoes.txt  app.py  schemas.py
fast_one/tests/: test_app.py  teste_app.py
fast_six/: .dockerignore  create_db.py  database.db  fly.toml  pyproject.toml
fast_six/fast_six/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_six/migrations/: env.py
fast_six/migrations/versions/: 17b02583f072_create_todo_tables.py  61c814bca1ef_ahhhh.py  f166a0ba1ded_fix_varchar_length.py
fast_six/routers/: auth.py  todo.py  users.py
fast_six/tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_todo.py  test_users.py
fast_three/: database.db  pyproject.toml
fast_three/fast_three/: app.py  database.py  models.py  schemas.py  settings.py
fast_three/migrations/: env.py
fast_three/migrations/versions/: 064c6af92346_exercicio_02_aula_04.py  067127e27439_create_users_table.py
fast_three/tests/: test_app.py  test_db.py
fast_two/: pyproject.toml
fast_two/fast_two/: app.py  schemas.py
fast_two/tests/: test_app.py
fast_two_sqlAlchemy/: code_1.py  code_2.py  code_3.py  code_4.py  code_5.py  code_6.py  code_7.py  code_8.py  database.db  database_avaliacao.db
fast_zero/: pyproject.toml
fast_zero/fast_zero/: app.py  schemas.py
fast_zero/tests/: test_app.py
