[tool.poetry]
name = "fast-two"
version = "0.1.0"
description = ""
authors = ["Henry Gabriel <63942305+HenryGabriel-2407@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.8.3"
taskipy = "^1.14.1"
pytest = "^8.3.4"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pytest-cov = "^6.0.0"
pydantic = {extras = ["email"], version = "^2.10.3"}

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
run = 'fastapi dev fast_two/app.py'
test = 'pytest -s -x --cov=fast_two -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre_test = 'task lint'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
